--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,15 +19,22 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Delete</th>
         </tr>
       </thead>
       <tbody>
         <% for(let url in urls) { %>
           <tr>
-            <td><%= url %></td>
-            <td><%= urls[url] %></td>
+           <td><%= url %></td>
+            <td><%= urls[url] %></td> 
+            <td><form action="/urls/<%= url %>/delete" method="POST">
+              <button>Delete</button>
+              </form></tr></td>
+            
           </tr>
+          
         <% } %>
+       
       </tbody>
     </table>
   </main>
