--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -19,6 +19,7 @@
         <tr>
           <th scope="col">Short URL</th>
           <th scope="col">Long URL</th>
+          <th scope="col">Edit</th>
           <th scope="col">Delete</th>
         </tr>
       </thead>
@@ -28,8 +29,12 @@
            <td><%= url %></td>
             <td><%= urls[url] %></td> 
             <td><form action="/urls/<%= url %>/delete" method="POST">
-              <button>Delete</button>
-              </form></tr></td>
+              <button type='submit' value='delete'>Delete</button>
+              </form></td>
+              <td><form action="/urls/<%= url %>" method="GET">
+                <button type='submit' value="update">Edit</button>
+                </form></td>
+              
             
           </tr>
           
