--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -29,10 +29,10 @@
            <td><%= url %></td>
             <td><%= urls[url] %></td> 
             <td><form action="/urls/<%= url %>/delete" method="POST">
-              <button type='submit' value='delete'>Delete</button>
+              <button type="submit" value="delete">Delete</button>
               </form></td>
               <td><form action="/urls/<%= url %>" method="GET">
-                <button type='submit' value="update">Edit</button>
+                <button type="submit" value="update">Edit</button>
                 </form></td>
               
             
