--- a/views/urls_show.ejs
+++ b/views/urls_show.ejs
@@ -14,10 +14,10 @@
       <div class="card-header"></div>
       <div class="card-body">
         <h5 class="card-title">TinyURL for: <%= longURL %></h5>
-        <p class="card-text">Short URL: <a href="/u/<%= shortURL %>"><%= shortURL %></a></p>
+        <p class="card-text">Short URL: <a href="/url/<%= shortURL %>"><%= shortURL %></a></p>
         <form action="/urls/<%= shortURL %>" method="POST">
         <p>New URL:<input type="text" value="<%= longURL %>" id="longURL" name="longURL"></p>
-        <button type='submit' value="submit">Submit</button>
+        <button type="submit" value="submit">Submit</button>
         </form>
       </div>
     <div class="card-footer text-muted"></div>
