--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -12,15 +12,13 @@
       </div>
       
     </div>
-    <% console.log(userId) %>
     <% if(userId){ %>
       <form action="/logout" method="POST">
         <span>Logged in As:</span><%= userId %><button>Logout</button>
       </form>
      <% } else {%>
-      <form action="/login" method="POST">
-      <input type="text" placeholder="Username" name="username"><button type="submit">Login</button>
-    </form>
+      <a href="/register">Register</a>
+      <a href="/login">Login</a>
      <% } %>
   
   </nav>
