--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,7 +7,9 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 </head>
 <body>
-
+<header>
+  <%- include('partials/_header') %>
+</header>
 
   <form action="/login" method="POST">
     <div class="form-group">
