--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -13,7 +13,9 @@
       
     </div>
     <% if(userId){ %>
-        <span>Logged in As:</span><%= userId.email %><button>Logout</button>
+      <form action="/logout" method="POST">
+        <span>Logged in As:</span><%= userId.email %><button type ="submit">Logout</button>
+      </form>
      <% } else {%>
       <a class="btn btn-primary" href="/register" role="button" style="width: 100px; margin: 1em">Register</a>
       <a class="btn btn-primary" href="/login" role="button" style="width: 100px; margin: 1em">Login</a>
