--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -27,7 +27,7 @@
         <% for(let url in urls) { %>
           <tr>
            <td><%= url %></td>
-            <td><%= urls[url] %></td> 
+            <td><%= urls[url].longURL %></td> 
             <td><form action="/urls/<%= url %>/delete" method="POST">
               <button type="submit" value="delete">Delete</button>
               </form></td>
