--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -13,6 +13,7 @@
     <%- include('partials/_header') %>
   </header>
   <main style="margin: 1em;">
+    <% if(userId) { %>
     <h3>My URLs</h3>
     <table class="table">
       <thead>
@@ -35,13 +36,15 @@
                 <button type="submit" value="update">Edit</button>
                 </form></td>
               
-            
           </tr>
           
         <% } %>
        
       </tbody>
     </table>
+    <% } else { %>
+      <h1>Please Login</h1>
+      <% } %>
   </main>
   <!-- Bootstrap JS -->
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
