added a unit test for a helper function

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,17 +12,18 @@
 </header>
 
   <form action="/login" method="POST">
-    <div class="form-group ">
-      <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email">
+    <div class="form-group">
+      <label for="exampleInputEmail1" style="margin-left:2em;">Email address</label>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email" name="email" style="max-width: 300px; margin-left: 2em;">
     </div>
     <div class="form-group">
-      <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password" name='password'>
+      <label for="exampleInputPassword1" style="margin-left:2em;"">Password</label>
+      <input type="password" class="form-control " id="exampleInputPassword1" placeholder="Password" name="password" style="max-width: 300px;margin-left: 2em;">
     </div>
     <div class="form-check">
     </div>
-    <button type="submit" class="btn btn-primary">Login</button>
+    <button type="submit" class="btn btn-primary" style="margin-left:2em;">Login</button>
+    </form>
 </body>
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
