--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -17,8 +17,8 @@
         <span>Logged in As:</span><%= userId.email %><button type ="submit">Logout</button>
       </form>
      <% } else {%>
-      <a class="btn btn-primary" href="/register" role="button" style="width: 100px; margin: 1em">Register</a>
-      <a class="btn btn-primary" href="/login" role="button" style="width: 100px; margin: 1em">Login</a>
+      <a class="btn btn-primary btn-sm" href="/register" role="button" style="width:100px; margin-right:1em">Register</a>
+      <a class="btn btn-primary btn-sm" href="/login" role="button" style="width:100px;">Login</a>
       
      <% } %>
   
